docker/halo/postgres_svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s.kuboard.cn/name: postgres
  name: postgres
  namespace: default
spec:
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: postgres-port
      nodePort: 31273
      port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    k8s.kuboard.cn/name: postgres
  type: NodePort
